@@ -12,22 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-module "slurm_cluster" {
-  source = "../../../terraform"
+terraform {
+  required_version = "~> 1.0"
 
-  project_id   = var.project_id
-  cluster_name = "attach-network"
-
-  network = {
-    auto_create_subnetworks = false
-    network                 = "default"
-    subnets = [
-      {
-        name   = "default"
-        region = "us-central1"
-      },
-    ]
-    subnets_spec       = null
-    subnetwork_project = null
+  required_providers {
+    google = {
+      source  = "hashicorp/google"
+      version = "~> 3.0"
+    }
   }
 }
