@@ -36,4 +36,11 @@ variable "subnets_spec" {
     region = string
   }))
   description = "Subnet specification."
+  default     = []
+}
+
+variable "auto_create_subnetworks" {
+  type        = bool
+  description = "When set to true, the network is created in 'auto subnet mode' and it will create a subnet for each region automatically across the 10.128.0.0/9 address range. When set to false, the network is created in 'custom subnet mode' so the user can explicitly connect subnetwork resources."
+  default     = true
 }
