@@ -5,6 +5,7 @@ Changes in Slurm-GCP 5.0.0
  -- Compute nodes are no longer orphaned on terraform destroy
  -- Replaced `foundry/` with `packer/`
  -- Terraform modules now use Google Cloudfoundry Toolkit
+ -- Added auto_create_subnetworks option
 
 Changes in Slurm-GCP 4.0.3
 ==========================
